Fix home page on mobile device

--- a/home/static/css/homepage.css
+++ b/home/static/css/homepage.css
@@ -119,49 +119,49 @@
     .trait-card {
         width: 100%;
         height: 100px;
-        position: absolute;
         text-align: left;
+        text-wrap: wrap;
+        display: block;
     }
 
     .trait-card img {
         width: auto;
         height: 100%;
+        display: inline-block;
     }
 
     .text-top-right {
-        right: auto;
-        top: auto;
-        position: absolute;
+        right: unset;
+        top: unset;
+        position:relative;
         display: inline-block;
         vertical-align: middle;
         margin: auto !important;
         text-align: left;
-        padding-left: 1rem;
-        width: 100% !important;
+        padding-left: 0rem;
     }
 
     .text-top-middle {
-        right: auto;
-        top: auto;
-        position: absolute;
+        right: unset;
+        top: unset;
+        position: relative;
         display: inline-block;
         vertical-align: middle;
         margin: auto !important;
         text-align: left;
-        padding: unset;
+        padding: 0rem;
+        width: 50%;
     }
 
     .text-top-left {
         left: auto;
         top: auto;
-        position: absolute;
+        position: relative;
         display: inline-block;
         vertical-align: middle;
         margin: auto !important;
         text-align: left;
         padding-left: 1rem;
-        width: 100% !important;
-
     }
 
     .text-top-left h3{
@@ -175,6 +175,16 @@
     .trait-card h3{
         font-size: 30px;
         font-weight: 200;
-        margin-top: 35px;
+        margin-bottom: 0rem;
+    }
+
+    .inline-mobile {
+        display: inline;
+        vertical-align: top;
+    }
+
+    .text-top-middle h3 {
+        display: inline-block;
+        margin-top: 1rem;
     }
 }
